--- a/sara_junio_16/bower.json
+++ b/sara_junio_16/bower.json
@@ -9,10 +9,9 @@
   "license": "MIT",
   "homepage": "http://foundation.zurb.com",
   "dependencies": {
-    "foundation-sites": "~6.1.2",
-    "motion-ui": "~1.1.0",
     "foundation-sites": "~6.2.0",
-    "motion-ui": "~1.2.2"
+    "motion-ui": "~1.2.2",
+    "what-input": "^3.0.0"
   },
   "ignore": [
     "**/.*",
@@ -21,5 +20,8 @@
     "test",
     "tests"
   ],
-  "private": true
+  "private": true,
+  "resolutions": {
+    "what-input": "^3.0.0"
+  }
 }
